@@ -66,6 +66,9 @@
 39. Read/write device cache files in non-gui thread.
 40. Add option to save streams in mpd folder.
 41. GZip compress streams files.
+42. When reading cache (either MPD, or device), and the grouping (single
+    tracks, or multiple artists) has changed - then dont do a rescan, just
+    re-do the grouping.
 
 0.9.2
 -----
